# M1Learning

advanced_docker/: README.md  history_2023-10-23.txt
advanced_docker/ex-20/rust-example_helloWorld/: Dockerfile
advanced_docker/ex-21/rust-example_weather/rust-example_elaboré/: Dockerfile
advanced_docker/ex-22/: docker-compose.yaml
advanced_docker/ex-22/PYTHON/: Dockerfile
advanced_docker/ex-23/: docker-compose.yaml
advanced_docker/ex-23/docker/: Dockerfile
advanced_docker/ex-24/: docker-compose.yaml
advanced_docker/part-1/ex-19/: Dockerfile
advanced_docker/part-1/ex-20/rust-example_helloWorld/: Cargo.toml  Dockerfile
advanced_docker/part-1/ex-21/rust-example_weather/rust-example_elaboré/: Cargo.toml  Dockerfile
advanced_docker/part-1/ex-21/rust-example_weather/rust-example_elaboré/src/: main.rs
advanced_docker/part-1/ex-23/: docker-compose.yaml
advanced_docker/part-1/ex-24/: troubleshooting.md
advanced_docker/part-1/programs/: library_dump.sql
advanced_docker/part-2/tp-1/: Dockerfile  README.md  app.py
advanced_docker/part-2/tp-2/: Cargo.toml  Dockerfile
advanced_docker/part-2/tp-2/src/: main.rs
advanced_docker/part-2/tp-3/mysql/: dump.sql
advanced_docker/part-2/tp-3/php/: Dockerfile  index.php
advanced_sql/part-1/: README.md  docker-compose.yaml
english/26.10.23/: cover_letter.md  speach.md
symfony/: docker-compose.yml
symfony/iutBlog/: .env  .env.test
symfony/part-1/: Dockerfile  docker-compose.yml
symfony/part-1/iutBlog/: .env
web_integration/totos_cookies/: README.md  index.html
(+4 files in other folders)
