[package]
name = "rust-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"